deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinteractive
  labels:
    app: podinteractive
spec:
  replicas: 1
  template:
    metadata:
      name: podinteractive
      labels:
        app: podinteractive
    spec:
      containers:
        - name: podinteractive
          image: weibh/podinteractive
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      serviceAccountName: podinteractive
  selector:
    matchLabels:
      app: podinteractive
---
apiVersion: v1
kind: Service
metadata:
  name: podinteractive
spec:
  selector:
    app: podinteractive
  ports:
    - port: 9999
      targetPort: 9999
  type: clusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinteractive
  namespace: kube-system
spec:
  rules:
    - host: www.podinteractive.com
      http:
        paths:
          - backend:
              serviceName: podinteractive
              servicePort: 9999
